layout for home page

--- a/frontend-gui/src/App.css
+++ b/frontend-gui/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main {
+  font-family: "Inter", sans-serif;
+  background-color: var(--main-bg);
+  color: var(--main-color);
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: calc(100vh); 
 }
 
-.App-link {
-  color: #61dafb;
+.menuContainer {
+  width: 250px;
+  padding: 20px 20px;
+  border-right: 2px solid var(--soft-bg);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.contentContainer {
+  padding: 20px 20px;
+  width: 100%;
 }
