--- a/frontend-gui/src/index.css
+++ b/frontend-gui/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+:root {
+  /* BG */
+  --main-bg: #2a3447;
+  --soft-bg: #384256;
+  --dark-bg: #222b3c;
+  /* TEXT */
+  --main-color: white;
+  --soft-color: #ddd;
+  --dark-color: #2a3447
+}
