--- a/frontend-gui/src/components/powerFlow/powerFlow.css
+++ b/frontend-gui/src/components/powerFlow/powerFlow.css
@@ -2,7 +2,7 @@
 .powerFlow {
     display: grid;
     gap: 20px;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     grid-auto-rows: minmax(100px, auto);
     grid-auto-flow: dense;
   
@@ -19,13 +19,44 @@
     grid-row: span 1;
 }
 
-.box_1row_2col_flow {
-    padding: 20px;
-    grid-column: span 2;
+.box_1row_1col_flow_solar_icon {
+    grid-column: span 1;
+    grid-row: span 1;
+    background-color: beige;
+    opacity: 0.85;
+}
+
+.box_1row_1col_flow_pad {
+    padding-top: 20px;
+    grid-column: span 1;
     grid-row: span 1;
 }
 
 .solar_icon {
     display: flex;
     justify-content: center;
+    color:#ffae0b;
+}
+
+.home_icon {
+    display: flex;
+    justify-content: center;
+}
+
+.grid_power_icon_white{
+    display: flex;
+    justify-content: center;
+}
+
+.grid_power_icon_black{
+    display: flex;
+    justify-content: center;
+    color:#202020
+}
+
+.box_1row_1col_flow_grid_power_icon {
+    grid-column: span 1;
+    grid-row: span 1;
+    background-color: beige;
+    opacity: 0.85;
 }
