--- a/frontend-gui/src/components/powerFlow/powerFlow.css
+++ b/frontend-gui/src/components/powerFlow/powerFlow.css
@@ -2,8 +2,7 @@
 .powerFlow {
     display: grid;
     gap: 20px;
-    grid-template-columns: repeat(5, 1fr);
-    grid-auto-rows: minmax(100px, auto);
+    grid-template-columns: repeat(5, minmax(0, 1fr));
     grid-auto-flow: dense;
   
 }
