--- a/frontend-gui/src/components/powerFlow/powerFlow.css
+++ b/frontend-gui/src/components/powerFlow/powerFlow.css
@@ -70,3 +70,19 @@
     text-align: center;
 }
 
+
+.flex-batteries-container{
+    display: flex;
+    flex: 1 1 0%;
+    gap: 20px;
+    margin-top: 1em;
+}
+
+
+.flex-battery{
+    border: 2px solid var(--soft-bg);
+    border-radius: 10px;
+    padding: 15px 20px;
+    width: 100%;
+}
+
