--- a/frontend-gui/src/components/powerFlow/powerFlow.css
+++ b/frontend-gui/src/components/powerFlow/powerFlow.css
@@ -71,11 +71,26 @@
 }
 
 
-.flex-batteries-container{
+.flex-batteries-container-active{
     display: flex;
     flex: 1 1 0%;
     gap: 20px;
     margin-top: 1em;
+    border: 2px solid var(--soft-bg);
+    border-radius: 10px;
+    padding: 10px 10px;
+    background-color: #777696;
+    opacity: 0.85;
+}
+
+.flex-batteries-container-ideal{
+    display: flex;
+    flex: 1 1 0%;
+    gap: 20px;
+    margin-top: 1em;
+    border: 2px solid var(--soft-bg);
+    border-radius: 10px;
+    padding: 10px 10px;
 }
 
 
